# transit-flow-maps

./: .gitignore  README.md
.github/workflows/: ci.yml
data/: README.md
docs/: README.md
pipeline/: README.md  pyproject.toml
pipeline/src/transit_flow_maps/: __init__.py  cli.py
pipeline/src/transit_flow_maps/config/: default.yaml  local.example.yaml
pipeline/src/transit_flow_maps/conflation/: densify.py  h3_index.py  segment_keys.py  simplify.py
pipeline/src/transit_flow_maps/corridors/: assign_to_corridors.py  corridors.py
pipeline/src/transit_flow_maps/export/: geojson.py  pmtiles.py
pipeline/src/transit_flow_maps/flows/: bart_od.py  muni_stop_loads.py
pipeline/src/transit_flow_maps/gtfs/: load_gtfs.py  routes.py  shapes.py
pipeline/src/transit_flow_maps/ingest/: bart.py  sfmta_muni.py
pipeline/src/transit_flow_maps/util/: config.py  crs.py  logging.py
pipeline/src/transit_flow_maps/validate/: reports.py
pipeline/tests/integration/: test_smoke_scaffold.py
pipeline/tests/unit/: test_bart_od.py  test_cli.py  test_config_defaults.py  test_corridor_assignment_membership.py  test_corridors.py  test_crs.py  test_densify.py  test_geojson_export.py  test_load_gtfs.py  test_muni_normalization.py  test_simplify.py  test_validate_reports.py
web/: package.json  tsconfig.json  vite.config.ts
web/scripts/: sync-processed-data.mjs
web/src/: index.html  main.ts
web/src/map/: hover.ts  layers.ts  style.ts
